https://developer.berlios.de/bugs/?func=addbug&group_id=6117

Feature requests should be submitted here:
https://developer.berlios.de/feature/?func=addfeature&group_id=6117

Tom Charlesworth
tomch at users.berlios.de


1.22.1.5 - 26 Apr 2013
----------------------
Changes:
. Extended logging support during startup and shutdown.
. Allow debugging of save-state image from start-up "logo" screen.

Fixes:
. Screenshot 280x192:
  - [Bug #018928] Correction for left edge loss of scaled scanline.
  - A screenshot in 50% scanline mode would produce an all black image.
. Fixed inserting of disk images from save-state when drive-2 contained the disk required for drive-1.

1.22.1 - 7 Mar 2013
--------------------
Changes:
. Make 2x the default
  - [Bug #018851] Refuse double-sizing the window unless the screen is large enough.

Fixes:
. [Bug #018886] MMU no good when no cards in slot-4 & 5
. [Bug #018852] WinXP: Switching 2x -> 1x video mode leaves old 2x data behind


1.22.0 - 1 Jan 2013
--------------------
Changes:
. [Feature #005557] Support DOSMaster image created by Apple Oasis.
. [Feature #003272 and #005335] Support 2x windowed mode:
  - Toggle between 1x and 2x by using Resize button (or F6).
  - Full screen now enabled by CTRL+Resize button (or CTRL+F6).

Fixes:
. [Feature #004346] Don't show mousetext for original Apple //e.
. Fixed HDD firmware to allow epyx_californiagames_iicplus.2mg to boot.
. HDD firmware: Added support for SmartPort entrypoint.
  - "Prince of Persia (Original 3.5 floppy for IIc+).2mg" now boots
. [Bug #018455] Improved rendering speed of debugger view.


1.21.1 - 12 Aug 2012
--------------------
Changes:
. [Feature #4399] Allow Z80 SoftCard to be inserted into slot 4 or 5. (Allows CP/M v3 to work)
. Reworked Configuration (property sheets) to allow multiple hardware changes.
. Updated Help .chm with info on No-Slot clock.

Fixes:
. Floating bus not returned for empty slot $Cnxx addresses. Fixes:
  - A2VGA.DSK: Apple][VGA card detection.