@@ -1,0 +1,31 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+	<head>
+		<title>Troubleshooting</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+	</head>
+	<body style="FONT-FAMILY: verdana; BACKGROUND-COLOR: rgb(255,255,255)" alink="#008000"
+		link="#008000" vlink="#008000">
+		<h2 style="COLOR: rgb(0,128,0)">Troubleshooting</h2>
+		<hr size="4">
+		<p style="FONT-WEIGHT: bold">Here is a list of issues and possible solutions:</p>
+
+		Uthernet network card not working.
+		<ul>
+		<li>There are problems when running with certain firewalls (eg. ZoneAlarm).
+			<ul>
+			<li>See the Uthernet network card section for details.</li>
+			</ul>
+		</li>
+		</ul>
+
+		AppleWin doesn't startup.
+		<ul>
+		<li>It could be being blocked by your anti-virus software. There is a known problem with Constant Guard Protection Suite.
+			<ul>
+			<li>From your anti-virus software, unblock AppleWin to allow it to run.</li>
+			</ul>
+		</li>
+		</ul>
+	</body>
+</html>
